# apps/api/src/db/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./audit";
 export * from "./auth";
 export * from "./events";
 export * from "./organization";
+export * from "./registrations";
